--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "next": "13.0.3",
+    "pm2": "^5.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive": "^9.0.0",
     "sass": "^1.56.1",
     "typescript": "4.8.4"
   }
