--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "react-responsive": "^9.0.0",
     "sass": "^1.56.1",
     "typescript": "4.8.4"
+  },
+  "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^9.2.2",
+    "prisma-erd-generator": "^1.2.4"
   }
 }
