--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^9.2.2",
+    "prisma": "^4.7.1",
     "prisma-erd-generator": "^1.2.4"
   }
 }
