--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^13.0.6",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
