--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.4.3",
+    "@emotion/react": "11",
+    "@emotion/styled": "11",
     "@next/bundle-analyzer": "^13.0.6",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "18.11.9",
@@ -16,6 +19,7 @@
     "@types/react-dom": "18.0.8",
     "eslint": "8.27.0",
     "eslint-config-next": "^13.0.6",
+    "framer-motion": "6",
     "next": "^13.0.6",
     "pm2": "^5.2.2",
     "react": "^18.2.0",
