--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "eslint": "8.27.0",
     "eslint-config-next": "^13.0.6",
     "framer-motion": "6",
-    "next": "^13.0.7",
+    "next": "13.0.8-canary.0",
     "pm2": "^5.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
