--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,9 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "src/components/*.ts",
+    "src/components/*.tsx"
   ],
   "exclude": [
     "node_modules"
