--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "11",
     "@emotion/styled": "11",
     "@next/bundle-analyzer": "^13.0.6",
+    "@react-icons/all-files": "^4.1.0",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
