--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pm2": "^5.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.41.0",
     "typescript": "4.8.4"
   },
   "devDependencies": {
