--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "start-eco": "npm run build && pm2 reload ecosystem.config.js -p 3002"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.4.3",
